# big-data-tutorial-101

./: .buildinfo  .gitignore  Dockerfile  Makefile  README.md  _toc.yml  apt.txt  genindex.html  objects.inv  postBuild  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy.yaml
_sources/chapters/01/: dev.md
_sources/chapters/02/: basic.md
_sources/chapters/03/: installation.md
_sources/chapters/08/: _big-data.md  pyspark.ipynb
book/: _config.yml  _toc.yml
book/chapters/: intro.md
book/chapters/01/: _python.md  venv.md
book/chapters/02/: _file-versioning.md  advanced.md  basic.md  installation.md
book/chapters/03/: _containers.md  building-image.md  how-to-use.md
book/chapters/04/: _CICD.md  greeting.py  pytest.ipynb  test_greeting.py
chapters/: intro.html
chapters/01/: _python.html  dev.html  installation.html  installation.md  venv.html
chapters/02/: _file-versioning.html  advanced.html  basic.html  github.html  github.md  installation.html
chapters/03/: _containers.html  building-image.html  how-to-use.html  installation.html
chapters/04/: _CICD.html  github-actions.html  github-actions.ipynb  pre-commit.html  pre-commit.ipynb  pytest.html  pytest.ipynb
chapters/05/: _data-science-libraries.html
chapters/06/: _data-visualization.html  _data-visualization.md  bokeh.html  matplotlib.html  seaborn.html
chapters/07/: _hardware-accelerators.html  rapids.html
chapters/08/: _big-data.html  _big-data.md  best_practices.html  dask.html  dask.ipynb  pyspark.html  pyspark.ipynb  ray.html
(+34 files in other folders)
