[project]
name = "Big-Data-tutorial-101"
version = "0.1"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "Mathieu Dugré", email = "mathdugre@pm.me" },
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = []

[tool.hatch.envs.default]
python = "/home/math/.pyenv/shims/python"
dependencies = {file = ["requirements.txt"]}

[[tool.hatch.envs.test.matrix]]
python = ["311"]
